--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,6 @@ html {
   background: #000;
 }
 
-
-
-
 /* Hero circular spin */
 .circle-text {
   -webkit-animation: spin 12s linear infinite;
@@ -214,7 +211,6 @@ section {
   background: #ffb727;
 }
 
-
 @keyframes animate-loading {
   0% {
     transform: rotate(0deg);
@@ -222,5 +218,149 @@ section {
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/*--------------------------------------------------------------
+# Contact MCounter Section
+--------------------------------------------------------------*/
+
+.parallax-mf {
+  position: relative;
+  padding: 5rem 0;
+}
+
+.bg-image {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center center;
+}
+
+.overlay-mf {
+  background-color: #ffb2369e;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.7;
+}
+
+.counter-ico {
+  margin-bottom: 1rem;
+}
+
+.counter-ico .ico-circle {
+  height: 60px;
+  width: 60px;
+  line-height: 1.2;
+  -webkit-box-shadow: 0 0 0 10px #ffeed2;
+  box-shadow: 0 0 0 10px #ffeed2;
+}
+
+.ico-circle {
+  height: 100px;
+  width: 100px;
+  font-size: 2rem;
+  border-radius: 50%;
+  line-height: 1.5;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
+  font-size: 3rem;
+}
+
+.ico-circle:hover {
+  background-color: #ffb236;
+  color: #fff;
+  -webkit-box-shadow: 0 0 0 3px #ffeed2;
+  box-shadow: 0 0 0 3px #ffeed2;
+  -webkit-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-image: url('/images/counters-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: overlay;
+}
+
+.stat-item {
+  color: white;
+  text-align: center;
+  flex: 1;
+  z-index: 1;
+}
+
+.icon {
+  font-size: 40px;
+}
+
+.stat-number {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.stat-description {
+  font-size: 20px;
+}
+
+@media (max-width: 768px) {
+  .stats-container {
+    flex-direction: row;
+    height: auto;
+    padding: 20px 10px;
+  }
+
+  .icon {
+    font-size: 40px;
+  }
+
+  .stat-number {
+    font-size: 24px;
+  }
+
+  .stat-description {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 438px) {
+  .stats-container {
+    flex-direction: column;
+    height: auto;
+    padding: 20px 0px 0px 0px;
+    gap: 20px;
+  }
+
+  .icon {
+    font-size: 30px;
+  }
+
+  .stat-number {
+    font-size: 25px;
+  }
+
+  .stat-description {
+    font-size: 15px;
+  }
+
+  .counter-ico .ico-circle {
+    height: 40px;
+    width: 40px;
+    line-height: 1.2;
+    box-shadow: 0 0 0 5px #ffeed2;
   }
 }
